[gd_scene load_steps=10 format=3 uid="uid://bb0sn77dx81m5"]

[ext_resource type="Script" uid="uid://i4tg842v547g" path="res://scenes/entities/block/block.gd" id="1_0ubtx"]
[ext_resource type="Texture2D" uid="uid://dnflnlgitpp67" path="res://assets/sprites/block-heads.png" id="2_r4v3w"]
[ext_resource type="Script" uid="uid://c0resqh8usv6" path="res://scenes/entities/block/block_config.gd" id="2_xyfs1"]
[ext_resource type="Texture2D" uid="uid://cudk33qiccmto" path="res://assets/sprites/block-decors.png" id="3_djqvm"]
[ext_resource type="PackedScene" uid="uid://dfiuc5ml05flq" path="res://scenes/entities/block/block_segment.tscn" id="3_tomy5"]
[ext_resource type="Texture2D" uid="uid://cs1xm7dei6hpf" path="res://assets/sprites/block-connections.png" id="5_xubix"]
[ext_resource type="Script" uid="uid://dcp3io07cpn03" path="res://scenes/shared/resource_visualiser.gd" id="7_agou5"]

[sub_resource type="Resource" id="Resource_ema5x"]
script = ExtResource("2_xyfs1")
head_frame = -1
decor_frame = -1
connection_frame = -1
connection_level = -1
segment0_frame = 0
segment1_frame = 0
segment2_frame = 0
segment3_frame = 0
segment4_frame = 0

[sub_resource type="Resource" id="Resource_rutlo"]
metadata/__load_path__ = "res://resources/blocks/block_1_2__.tres"

[node name="Block" type="Node2D"]
modulate = Color(0.709479, 0.518602, 0.496049, 1)
script = ExtResource("1_0ubtx")
config = SubResource("Resource_ema5x")

[node name="BlockHead" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_r4v3w")
centered = false
offset = Vector2(0, -16)
vframes = 4
frame = 1

[node name="BlockDecor" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.8, 0.8, 0.8, 1)
texture = ExtResource("3_djqvm")
centered = false
offset = Vector2(0, -32)
vframes = 5

[node name="BlockConnection" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-48, -16)
texture = ExtResource("5_xubix")
centered = false
vframes = 2

[node name="BlockSegmentsRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="BlockSegment0" parent="BlockSegmentsRoot" instance=ExtResource("3_tomy5")]

[node name="BlockSegment1" parent="BlockSegmentsRoot" instance=ExtResource("3_tomy5")]
position = Vector2(0, 32)

[node name="BlockSegment2" parent="BlockSegmentsRoot" instance=ExtResource("3_tomy5")]
position = Vector2(0, 64)

[node name="BlockSegment3" parent="BlockSegmentsRoot" instance=ExtResource("3_tomy5")]
position = Vector2(0, 96)

[node name="BlockSegment4" parent="BlockSegmentsRoot" instance=ExtResource("3_tomy5")]
position = Vector2(0, 128)

[node name="ResourceVisualizer" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("7_agou5")
visualize_seconds = 120.0
target = NodePath("..")
method_name = "set_config"
resource = SubResource("Resource_rutlo")
